syntax = "proto3";
package com.strandhvilliam.geolocevent;

option java_package = "com.strandhvilliam.geolocevent.proto";
option java_outer_classname = "GeoLocEventProto";
option java_multiple_files = true;

message GeoLocEvent {
  string id = 1;
  string orderId = 2;
  string driverId = 3;
  string customerId = 4;
  Coordinates coordinates = 5;
  string timestamp = 6;
  double distance = 7;
}

message Coordinates {
  double latitude = 1;
  double longitude = 2;
}

